@@ -3,6 +3,10 @@
 # $Header: $
 
   19 Oct 2009; Vlastimil Babka <caster@gentoo.org>
+  sun-jdk-1.6.0.18_beta3.ebuild, sun-jdk-1.7.0.0_alpha74.ebuild:
+  Fix check_license call and call java-vm-2_pkg_setup.
+
+  19 Oct 2009; Vlastimil Babka <caster@gentoo.org>
   sun-jdk-1.6.0.18_beta2.ebuild, sun-jdk-1.6.0.18_beta3.ebuild,
   sun-jdk-1.7.0.0_alpha74.ebuild:
   Replace RESTRICT=fetch with ACCEPT_LICENSE stuff. Set it and forget it!
